# CollabLLM-Based-User-Simulator-Architecture

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
collabllm_sim/: __init__.py  cli.py  config.py  types.py
collabllm_sim/analytics/: collector.py
collabllm_sim/clients/: clinic_client.py  patient_client.py
collabllm_sim/conversation/: engine.py
collabllm_sim/personas/: clinic.py  generator.py
collabllm_sim/scenarios/: generator.py
collabllm_sim/translate/: translator.py
scripts/: run_tests.sh
src/collab_sim/: __init__.py  cli.py
src/collab_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/collab_sim/analytics/: dashboard.py  logger.py  summary.py
src/collab_sim/connectors/: http_client.py  stub_client.py
src/collab_sim/env/: simulator.py
src/collab_sim/lang/: __init__.py  bilingual.py
src/collab_sim/personas/: __init__.py  clinic.py  patient.py
src/collab_sim/rewards/: __init__.py  multi_turn.py
src/collab_sim/scenarios/: __init__.py  generator.py
tests/: test_clinic_persona.py  test_conversation.py  test_personas.py  test_scenarios.py  test_translate.py
tests/flow/: test_end_to_end.py
tests/load/: test_load.py
tests/unit/: test_bilingual.py  test_personas.py  test_rewards.py  test_scenarios.py  test_state.py
