[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collab-sim"
version = "0.1.0"
description = "CollabLLM-inspired user simulation framework for multi-turn healthcare conversations"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Simulation Team" }
]
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.7.0",
  "requests>=2.31.0",
  "rich>=13.7.0"
]

[project.optional-dependencies]
dashboard = [
  "streamlit>=1.35.0",
  "pandas>=2.2.0"
]

test = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-xdist>=3.6.0",
  "pytest-cov>=5.0.0"
]

dev = [
  "ruff>=0.6.0",
  "mypy>=1.10.0"
]

[project.scripts]
collab-sim = "collab_sim.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true
check_untyped_defs = true

disallow_untyped_defs = true

disable_error_code = [
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
